Archive2/b0/c7b95ea8cfd420/output
main.cpp:1:1: error: expected unqualified-id
1>------ Build started: Project: Test, Configuration: Debug Win32 ------
^
main.cpp:111:86: warning: \u used with no following hex digits; treating as '\' followed by identifier [-Wunicode]
1>          c:\program files (x86)\microsoft visual c++ compiler nov 2013 ctp\include\utility(201) : see reference to class template instantiation 'std::list<test_ptr,std::allocator<_Ty>>' being compiled
                                                                                     ^
1 warning and 1 error generated.
